# soccer-statss

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/soccer_stats/: main.py
