[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soccer_stats"]

[project]
name = "soccer-stats"
version = "0.1.0"
authors = [
  { name = "Nas Issa", email = "nas.test@example.com" },
]
description = "Use soccer API to calculate stats"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.28.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=3.0",
  "black>=22.0",
  "isort>=5.0",
  "mypy>=0.981",
  "pre-commit>=2.20",
  "ruff>=0.1.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.ruff]
select = ["E", "F", "B", "ERA", "W", "I"]
line-length = 88